fix view size and style overflow sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,25 @@ label {
     text-shadow: rgba(255, 255, 255, 0.479) 1px 1px 2px;
   }
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
